Update Salifort Motors project lab.ipynb

--- a/Salifort Motors project lab.ipynb
+++ b/Salifort Motors project lab.ipynb
@@ -15,14 +15,12 @@
     "id": "gLEEr6peWcF7"
    },
    "source": [
-    "It is important to consult the stakeholders for business context at the beginning of a project (refer. Project Checklist) to allow proper determination on how we are going to frame the problem as one of the ML task.   \n",
-    "\n",
-    "**(Business Scenario & Problem)**<br>\n",
+    "**(Business Scenario & Problem)**\n",
     "The HR department at Salifort Motors wants to take some initiatives to improve employee satisfaction levels at the company. They collected data from employees, but now they don’t know what to do with it. They refer to you as a data analytics professional and ask you to provide data-driven suggestions based on your understanding of the data. They have the following question: what’s likely to make the employee leave the company?\n",
     "\n",
     "The goals in this project are to analyze the data collected by HR department and to build a model that predicts whether or not an employee will leave the company and identify factors that contribute to their leaving.\n",
     "\n",
-    "Because it is time-consuming and expensive to find, interview, and hire new employees, increasing employee retention will be beneficial to the company."
+    "Because it can be time-consuming and expensive to find, interview, and hire new employees, increasing employee retention will be beneficial to the company."
    ]
   },
   {
@@ -55,7 +53,7 @@
    "source": [
     "**Upon understanding the business context, we're able to frame the problem as:**  \n",
     "\n",
-    "Business Objective— *To design a model that predicts whether an employee will leave (quit & let go). Simultaneously, discover the primary driving factors behind the employee churn to strategically develop a solution around it.*      \n",
+    "Business Objective— *To design a model that predicts whether an employee will leave (quit & let go), along with discovering the primary driving factors behind the employee churn to strategically develop a solution around it.*      \n",
     "\n",
     "- a supervised learning task when labeled training examples are provided.  \n",
     " It is also a typical binomial classification task with only 2 outcomes (whether or not the employee left the company).\n",
