Update Salifort Motors project lab.ipynb

--- a/Salifort Motors project lab.ipynb
+++ b/Salifort Motors project lab.ipynb
@@ -2888,14 +2888,14 @@
     "- examining the multi-collinearity of vars to identify those that provide almost similar amounts of information. (eg. because the overall no. of rebounds should already incorporate both offensive & defensive rebounds, it would make sense to use the overall as a feature).  \n",
     "- Checking interaction terms for numeric function model<br> (eg. Regression, LinearDiscriminantAnalysis, SVM, and Neural Networks). \n",
     "\n",
-    "**( Often, the first round of modeling will incl. all possibly relevant variables as features and iteratively manipulated / selected on subsequent rounds via statistical significance, predictive power, coefficients etc. as guidance )**"
+    "( Often, the first round of modeling will incl. all possibly relevant variables as features and iteratively manipulated / selected on subsequent rounds via statistical significance, predictive power, coefficients etc. as guidance )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Engineering: Scaling, Transformation, Encoding, &/ Dimensionality Reduction"
+    "### Performing feature engineering to allow the algorithm to leverage the data in a suitable form"
    ]
   },
   {
