--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -738,9 +738,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above output shows the first five occurences of rows that are duplicated farther down in the dataframe. How likely is it that these are legitimate entries? In other words, how plausible is it that two employees self-reported the exact same response for every column?\n",
+    "The above output shows the first five occurrences of rows that are duplicated farther down in the DataFrame. How likely is it that these are legitimate entries? In other words, how plausible is it that two employees self-reported the exact same response for every column?\n",
     "\n",
-    "A likelihood analysis could be perform by essentially applying Bayes' theorem and multiplying the probabilities of finding each value in each column, but this doesn't seem necessary. With several continuous variables across 10 columns, it seems very unlikely that these observations are legitimate and can proceed by dropping them.  \n"
+    "A likelihood analysis could be performed by essentially applying Bayes' theorem and multiplying the probabilities of finding each value in each column, but this doesn't seem necessary. With several continuous variables across 10 columns, it seems very unlikely that these observations are legitimate and we can proceed by dropping them.  \n"
    ]
   },
   {
