--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -3560,18 +3560,10 @@
    "source": [
     "**What are the ethical implications of the model?** \n",
     "* What is the likely effect of the model when it predicts a false negative\n",
+    "- Salifort company will risk losing a potentially valuable employee, which might significantly impact the organizational profit.<br>\n",
+    "\n",
     "* What is the likely effect of the model when it predicts a false positive"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- The company will risk losing a potentially valuable employee as well as affecting the revenue of business.<br>\n",
-    "(On the other hand, if a difficult employee is failed to be identified and dealed with, it'll likely to affect the workplace culture as well as the overall productivity of employees at work.)\n",
-    "\n",
-    "\n",
-    "- Conversely, the company will risk allocating needless incentivizing treatment to an employee which in turn increases the operational cost. \n",
+    "- Salifort company will risk allocating needless incentivizing treatment to an employee, which incurs additional operating costs. \n",
     "\n"
    ]
   },
