--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -3559,11 +3559,11 @@
    "metadata": {},
    "source": [
     "**What are the ethical implications of the model?** \n",
-    "* What is the likely effect of the model when it predicts a false negative\n",
-    "- Salifort company will risk losing a potentially valuable employee, which might significantly impact the organizational profit.<br>\n",
+    "*What is the likely effect of the model when it predicts a false negative\n",
+    "Salifort company will risk losing a potentially valuable employee, which might significantly impact the organizational profit.<br>\n",
     "\n",
     "* What is the likely effect of the model when it predicts a false positive"
-    "- Salifort company will risk allocating needless incentivizing treatment to an employee, which incurs additional operating costs. \n",
+    "Salifort company will risk allocating needless incentivizing treatment to an employee, which incurs additional operating costs. \n",
     "\n"
    ]
   },
