--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -1997,7 +1997,7 @@
     "\n",
     "# Besides, a few things stand out from the marginal distributions.\n",
     "# 1. The employees who left were divided in 3 separate satisfaction groups, \n",
-    "#    which may be explained as: (A) aggrieved, (B) hesitant, and (C) assorting to better opportunities. \n",
+    "#    which may be explained as: (A) resentful, (B) hesitant, and (C) assorting to better opportunities. \n",
     "# (as suggested by the inflection pts- the change in behavior of the groups & the overlapping on the minor group of employees who stayed) \n",
     "#    - Of those in group A, it's possible that this group also includes the employees who were laid off\n",
     "#      instead of those who voluntarily turnover due to negative effect.\n",
