--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -4835,7 +4835,7 @@
     "\n",
     "- Whereby, the employees tend to leave after their 2nd tenure when they realized they were trapped in a suboptimal work condition or offered with a better opportunity elsewhere as described by the groups.\n",
     "\n",
-    "- To retain potential talents, stakeholders ought to improve the quality of management that supports employee success and offer better growth opportunities during the 2nd tenure.   "
+    "- To retain potential talents, stakeholders ought to improve the quality of management that supports employee success and offer better growth opportunities during their tenures typically the 2nd tenure.   "
    ]
   }
  ],
