--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -4833,7 +4833,7 @@
     "\n",
     "- From the discovered insights about data, the satisfaction score is affected by the number of projects and average monthly hours in a way potentially due to disproportionate distribution of work. Many employees adopt an inner satisfactory score when they work and have a strong correlation to reward system, which often involves in motivation, learning, and productivity. \n",
     "\n",
-    "- Whereby, the employees tend to leave after their 2nd tenure when they realized they were trapped in a suboptimal work condition or offered with a better opportunity elsewhere as described by the groups.\n",
+    "- Whereby, the employees tend to leave after their 3rd tenure when they realized they were trapped in a suboptimal work condition or offered with a better opportunity elsewhere as described by the groups.\n",
     "\n",
     "- To retain potential talents, stakeholders ought to improve the quality of management that supports employee success and offer better growth opportunities during their tenures typically the 2nd."
    ]
