Update ML Project

--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -1027,10 +1027,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the scales, skewness, capped values, typical / unusual values occurred within the distributions.</br>\n",
-    "&nbsp; — Explore the peaks, valleys, range & spread (mean, mode, quantiles). </br>\n",
-    "&nbsp; — Explore anomalies, outliers & missing values to decide the appropriate way to address them, depending on their impact and the amount of data. </br>\n",
-    "&nbsp; — What might explain them? Who can I consult to verify & correct the data? </br>\n",
+    "Check the scales, skewness, capped values, typical / unusual values occurred within the distributions.<br>\n",
+    "&nbsp; — Explore the peaks, valleys, range & spread (mean, mode, quantiles). <br>\n",
+    "&nbsp; — Explore anomalies, outliers & missing values to decide the appropriate way to address them, depending on their impact and the amount of data. <br>\n",
+    "&nbsp; — What might explain them? Who can I consult to verify & correct the data? <br>\n",
     "&emsp; &nbsp; (data collection team, stakeholders, or experience team members) "
    ]
   },
