--- a/End-to-end_Machine-Learning-Project.ipynb
+++ b/End-to-end_Machine-Learning-Project.ipynb
@@ -6,7 +6,7 @@
     "id": "ysS5rgTMWpwL"
    },
    "source": [
-    "# **Project 1: Providing data-driven suggestions for HR**"
+    "# **Providing data-driven suggestions for HR**"
    ]
   },
   {
